feature: 迁移重构MCP第二阶段